grid alignment fixed /description text overflow fixed

--- a/views/profile-page/profile-page-style.css
+++ b/views/profile-page/profile-page-style.css
@@ -384,8 +384,8 @@ header p {
     z-index: 2;
 }
 
+/* Text container  */
 .tiles article > a {
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -394,8 +394,10 @@ header p {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+
+    width:300px;
+    height:300px;
+
     padding: 1em;
     border-radius: 4px;
     border-bottom: 0;
@@ -431,6 +433,12 @@ header p {
     margin-bottom: 0;
 }
 
+.tiles article > a .content .description
+{
+    width:100%;
+    word-break: break-all;
+}
+
 .tiles article#style1 > .image:before {
     background-color: #f2849e;
 }
@@ -455,26 +463,6 @@ header p {
     background-color: #8499e7;
 }
 
-body:not(.is-touch) .tiles article:hover > .image {
-    -moz-transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
-}
-
-body:not(.is-touch) .tiles article:hover > .image:before {
-    background-color: #333333;
-    opacity: 0.35;
-}
-
-body:not(.is-touch) .tiles article:hover > .image:after {
-    opacity: 0;
-}
-
-body:not(.is-touch) .tiles article:hover .content {
-    max-height: 15em;
-    opacity: 1;
-}
 
 * + .tiles {
     margin-top: 2em;
@@ -540,7 +528,7 @@ body.is-touch .tiles article .content {
 }
 
 /* image ratio: 1:1 */
-@media screen and (max-width:500px){
+@media screen and (max-width:640px){
     .tiles article > .image {
 
         transition: transform 0.5s ease;
@@ -550,6 +538,12 @@ body.is-touch .tiles article .content {
         border-radius: 4px;
         overflow: hidden;
 
+    }
+
+    /* text alignment fixed */
+    .tiles article a{
+        width:230px;
+        height:230px;
     }
 
     .tiles article > .image img {
@@ -604,7 +598,6 @@ body.is-touch .tiles article .content {
 
 }
 
-
 #header
 {
     margin-bottom: 50px;
@@ -617,4 +610,26 @@ a, a:hover, i, i:hover
     text-decoration: none;
     border:0;
     color:black; /* fix the text color later!!*/
+}
+
+
+body:not(.is-touch) .tiles article:hover > .image {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+body:not(.is-touch) .tiles article:hover > .image:before {
+    background-color: #333333;
+    opacity: 0.35;
+}
+
+body:not(.is-touch) .tiles article:hover > .image:after {
+    opacity: 0;
+}
+
+body:not(.is-touch) .tiles article:hover .content {
+    max-height: 15em;
+    opacity: 1;
 }
